SimpleWeather: major bug fixes
* Use KeyUp event instead of KeyDown (fix possible double Enter pressed event)
* Cleanup Temperature Unit settings
* Refresh weather data if weather unit doesn't match Settings
* Fix errors with handling files
* Use ConfigureAwait(false) to avoid deadlocks in FileAccess
* Add function to check if file is in use

--- a/SimpleWeather/SimpleWeather.csproj
+++ b/SimpleWeather/SimpleWeather.csproj
@@ -106,6 +106,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="ConversionMethods.cs" />
+    <Compile Include="FileUtils.cs" />
     <Compile Include="LocationsPage.xaml.cs">
       <DependentUpon>LocationsPage.xaml</DependentUpon>
     </Compile>
