--- a/SimpleWeather/SimpleWeather.csproj
+++ b/SimpleWeather/SimpleWeather.csproj
@@ -105,8 +105,17 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ConversionMethods.cs" />
-    <Compile Include="FileUtils.cs" />
+    <Compile Include="Controls\LocationPanelView.cs" />
+    <Compile Include="Controls\ForecastItemView.cs" />
+    <Compile Include="Controls\LocationPanel.xaml.cs">
+      <DependentUpon>LocationPanel.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WeatherNowView.cs" />
+    <Compile Include="Controls\ForecastItem.xaml.cs">
+      <DependentUpon>ForecastItem.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Utils\ConversionMethods.cs" />
+    <Compile Include="Utils\FileUtils.cs" />
     <Compile Include="LocationsPage.xaml.cs">
       <DependentUpon>LocationsPage.xaml</DependentUpon>
     </Compile>
@@ -114,12 +123,12 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Settings.cs" />
+    <Compile Include="Utils\Settings.cs" />
     <Compile Include="SettingsPage.xaml.cs">
       <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Weather.cs" />
-    <Compile Include="WeatherDataLoader.cs" />
+    <Compile Include="Utils\WeatherDataLoader.cs" />
     <Compile Include="Shell.xaml.cs">
       <DependentUpon>Shell.xaml</DependentUpon>
     </Compile>
@@ -158,6 +167,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Controls\ForecastItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\LocationPanel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="LocationsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
