--- a/SimpleWeather.Android/packages.config
+++ b/SimpleWeather.Android/packages.config
@@ -72,5 +72,6 @@
   <package id="Xamarin.Android.Support.v7.GridLayout" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Bindings.UniversalImageLoader" version="1.0.4" targetFramework="monoandroid71" />
   <package id="Xamarin.Build.Download" version="0.4.4" targetFramework="monoandroid71" />
 </packages>
