SimpleWeather.UWP: LocationsPage UI updates
* Merge home location and others into a single list
* Add an edit mode for deleting locations and setting home location
* Allow rearranging location panels
* Always keep top location as home
* Add helper value converters
* Cleanup a few common styles

--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -107,6 +107,8 @@
     <Compile Include="Controls\LocationQuery.xaml.cs">
       <DependentUpon>LocationQuery.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\BooleanToVisibilityConverter.cs" />
+    <Compile Include="Helpers\InverseBooleanConverter.cs" />
     <Compile Include="LocationsPage.xaml.cs">
       <DependentUpon>LocationsPage.xaml</DependentUpon>
     </Compile>
