--- a/SimpleWeather.Android/Properties/AndroidManifest.xml
+++ b/SimpleWeather.Android/Properties/AndroidManifest.xml
@@ -4,5 +4,6 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<application android:theme="@style/MasterDetailTheme" android:allowBackup="true" android:label="@string/app_name"></application>
 </manifest>
