SimpleWeather: exclude personal API key from release builds

--- a/SimpleWeather.Android/SimpleWeather.Android.csproj
+++ b/SimpleWeather.Android/SimpleWeather.Android.csproj
@@ -356,7 +356,8 @@
     <AndroidAsset Include="Assets\backgrounds\StormySky.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\API_KEY.txt" />
+    <AndroidAsset Include="Assets\API_KEY.txt"
+                  Condition="'$(Configuration)' == 'Debug'"/>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\menu\locations.xml" />
