--- a/SimpleWeather.Android/SimpleWeather.Android.csproj
+++ b/SimpleWeather.Android/SimpleWeather.Android.csproj
@@ -52,7 +52,8 @@
     <EnableLLVM>false</EnableLLVM>
     <BundleAssemblies>false</BundleAssemblies>
     <EnableProguard>true</EnableProguard>
-    <AndroidSupportedAbis />
+    <AndroidSupportedAbis>armeabi-v7a;x86</AndroidSupportedAbis>
+    <AndroidCreatePackagePerAbi>false</AndroidCreatePackagePerAbi>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AutoFitTextView, Version=0.2.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -356,8 +357,7 @@
     <AndroidAsset Include="Assets\backgrounds\StormySky.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\API_KEY.txt"
-                  Condition="'$(Configuration)' == 'Debug'"/>
+    <AndroidAsset Include="Assets\API_KEY.txt" Condition="'$(Configuration)' == 'Debug'" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\menu\locations.xml" />
