SimpleWeather: update packages

--- a/SimpleWeather.Android/packages.config
+++ b/SimpleWeather.Android/packages.config
@@ -5,7 +5,7 @@
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="monoandroid71" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="monoandroid71" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid71" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid71" />
@@ -55,8 +55,8 @@
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Compat" version="25.3.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Constraint.Layout" version="1.0.0-beta5" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Constraint.Layout.Solver" version="1.0.0-beta5" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Constraint.Layout" version="1.0.2.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Constraint.Layout.Solver" version="1.0.2.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Core.UI" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Core.Utils" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.CustomTabs" version="25.3.1" targetFramework="monoandroid71" />
@@ -71,5 +71,5 @@
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Bindings.UniversalImageLoader" version="1.0.4" targetFramework="monoandroid71" />
-  <package id="Xamarin.Build.Download" version="0.4.5" targetFramework="monoandroid71" />
+  <package id="Xamarin.Build.Download" version="0.4.6" targetFramework="monoandroid71" />
 </packages>
