--- a/SimpleWeather.UWP/project.json
+++ b/SimpleWeather.UWP/project.json
@@ -1,5 +1,6 @@
 ﻿{
   "dependencies": {
+    "Coding4Fun.Toolkit.Controls": "2.1.8",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
     "Newtonsoft.Json": "10.0.3"
   },
