--- a/Kimono.Controls.SnackBar/project.json
+++ b/Kimono.Controls.SnackBar/project.json
@@ -1,10 +1,6 @@
 ﻿{
   "dependencies": {
-    "Coding4Fun.Toolkit.Controls": "2.1.8",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
-    "Microsoft.Toolkit.Uwp.Notifications": "1.5.1",
-    "Newtonsoft.Json": "10.0.3",
-    "QueryString.NET": "1.0.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3"
   },
   "frameworks": {
     "uap10.0": {}
